# quick_blue

./: .actrc  .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  analysis_options.yaml  pubspec.yaml
.github/workflows/: ci.yml  latest-flutter.yml
quick_blue/: CHANGELOG.md  README.md  pubspec.yaml
quick_blue/android/: build.gradle
quick_blue/example/: README.md  pubspec.yaml
quick_blue/pigeons/: messages.dart
quick_blue/test/: public_api_test.dart  quick_blue_android_test.dart  quick_blue_test.dart
quick_blue_darwin/: .gitignore  CHANGELOG.md  README.md  pubspec.yaml
quick_blue_darwin/darwin/: .gitignore  quick_blue_darwin.podspec
quick_blue_darwin/pigeons/: messages.dart
quick_blue_darwin/test/: quick_blue_darwin_test.dart
quick_blue_linux/: CHANGELOG.md  README.md  pubspec.yaml
quick_blue_linux/lib/: quick_blue_linux.dart
quick_blue_linux/test/: quick_blue_linux_test.dart
quick_blue_platform_interface/: CHANGELOG.md  README.md  pubspec.yaml
quick_blue_platform_interface/lib/: method_channel_quick_blue.dart  models.dart  quick_blue_platform_interface.dart
quick_blue_platform_interface/test/: bluetooth_device_connection_test.dart  bluetooth_device_test.dart  bluetooth_gatt_test.dart  bluetooth_notifications_test.dart  bluetooth_uuid_test.dart  models_test.dart  quick_blue_exception_test.dart  quick_blue_platform_events_test.dart  quick_blue_platform_scan_test.dart  scan_filter_test.dart
quick_blue_windows/: CHANGELOG.md  LICENSE  README.md  analysis_options.yaml  pubspec.yaml
quick_blue_windows/lib/: quick_blue_windows.dart
quick_blue_windows/pigeons/: messages.dart
quick_blue_windows/test/: quick_blue_windows_test.dart
quick_blue_windows/windows/: CMakeLists.txt  connection_ownership.h  messages.g.cpp  messages.g.h  quick_blue_windows_plugin.cpp
quick_blue_windows/windows/test/: connection_ownership_test.cpp
scripts/: publish-packages.sh  windows-integration-test.sh
(+92 files in other folders)
